--- a/style.css
+++ b/style.css
@@ -1078,7 +1078,7 @@ textarea {
 }
 
 .campo-loca-tel>.loca {
-    padding-bottom: 5%;
+    padding-bottom: 3%;
 }
 
 .campo-loca-tel>.loca>.svg-txt {
@@ -1087,36 +1087,34 @@ textarea {
     margin-left: auto;
     margin-right: auto;
     margin-top: 10%;
+    margin-left: 40%;
 }
 
-.campo-loca-tel>.loca>.svg-txt>svg {
+.campo-loca-tel>.loca>.svg-txt>img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 120px;
-    background-color: #4ED963;
-    padding-top: 4%;
-    padding-bottom: 4%;
-    border-radius: 50%/50%;
-    margin-bottom: 5%;
+    width: 130px;
 }
 
 .campo-loca-tel>.loca>.svg-txt>h1 {
     text-align: center;
     color: #000000;
     font-weight: 100;
+    margin-top: 4%;
     margin-bottom: 2%;
+    font-size: 20px;
 }
 
 .campo-loca-tel>.loca>.svg-txt>h6 {
     text-align: center;
     color: #000000;
     width: 100%;
-    font-weight: 100;
+    font-weight: 500;
 }
 
 .campo-loca-tel>.tel {
-    padding-bottom: 5%;
+    padding-bottom: 3%;
 }
 
 .campo-loca-tel>.tel>.svg-txt {
@@ -1125,29 +1123,28 @@ textarea {
     margin-left: auto;
     margin-right: auto;
     margin-top: 10%;
+    margin-right: 40%;
 }
 
-.campo-loca-tel>.tel>.svg-txt>svg {
+.campo-loca-tel>.tel>.svg-txt>img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 200px;
-    background-color: #4ED963;
-    padding: 10%;
-    border-radius: 50px;
-    margin-bottom: 5%;
+    width: 130px;
 }
 
 .campo-loca-tel>.tel>.svg-txt>h1 {
     text-align: center;
     color: #000000;
     font-weight: 100;
+    margin-top: 4%;
     margin-bottom: 2%;
+    font-size: 20px;
 }
 
 .campo-loca-tel>.tel>.svg-txt>h6 {
     text-align: center;
     color: #000000;
     width: 100%;
-    font-weight: 100;
+    font-weight: 500;
 }
