--- a/style.css
+++ b/style.css
@@ -1072,7 +1072,7 @@ textarea {
 }
 
 .campo-loca-tel {
-    background-color: #CDE2EB;
+    background-color: #ffffff;
     width: 100%;
     margin-left: 0%;
 }
