--- a/style.css
+++ b/style.css
@@ -1172,6 +1172,11 @@ textarea {
     
     .campo-loca-tel>.loca>.svg-txt>h6 {
         font-weight: 100;
-        font-size: 12px;
+        font-size: 13px;
+    }
+
+    .campo-loca-tel>.tel>.svg-txt>h6 {
+        font-weight: 100;
+        font-size: 13px;
     }
 }
